add some modifications

--- a/CM4/03-Text-Classification-Assessment.ipynb
+++ b/CM4/03-Text-Classification-Assessment.ipynb
@@ -16,13 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from sklearn import metrics"
+    "\n",
+    "from sklearn import metrics\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.svm import LinearSVC"
    ]
   },
   {
@@ -158,12 +163,12 @@
    "source": [
     "# Check for whitespace strings (it's OK if there aren't any!):\n",
     "\n",
-    "blanks = []  # start with an empty list\n",
+    "blanks = []\n",
     "\n",
-    "for i,lb,rv in df.itertuples():  # iterate over the DataFrame\n",
-    "    if type(rv)==str:            # avoid NaN values\n",
-    "        if rv.isspace():         # test 'review' for whitespace\n",
-    "            blanks.append(i)     # add matching index numbers to the list\n",
+    "for i,lb,rv in df.itertuples():  \n",
+    "    if type(rv)==str:            \n",
+    "        if rv.isspace():         \n",
+    "            blanks.append(i)\n",
     "        \n",
     "print(len(blanks), 'blanks: ', blanks)"
    ]
@@ -276,12 +281,6 @@
     }
    ],
    "source": [
-    "\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.naive_bayes import MultinomialNB\n",
-    "from sklearn.svm import LinearSVC\n",
-    "\n",
     "text_clf_lsvc = Pipeline([('tfidf', TfidfVectorizer()),\n",
     "                     ('clf', LinearSVC()),\n",
     "])\n",
