--- a/TP5/03-Sentiment-Analysis-Assessment.ipynb
+++ b/TP5/03-Sentiment-Analysis-Assessment.ipynb
@@ -12,64 +12,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import spaCy and load the language library. Remember to use a larger model!\n",
-    "\n"
+    "import spacy\n",
+    "nlp = spacy.load('en_core_web_md')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Choose the words you wish to compare, and obtain their vectors\n",
-    "\n",
-    "\n"
+    "dog = nlp.vocab['dog'].vector\n",
+    "cat = nlp.vocab['cat'].vector\n",
+    "fox = nlp.vocab['fox'].vector\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import spatial and define a cosine_similarity function\n",
-    "\n",
-    "\n"
+    "from scipy import spatial\n",
+    "cosine_similarity = lambda x, y: 1 - spatial.distance.cosine(x, y)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write an expression for vector arithmetic\n",
-    "# For example: new_vector = word1 - word2 + word3\n"
+    "# For example: new_vector = word1 - word2 + word3\n",
+    "new_vector = dog - cat + fox"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['fox', 'dog', 'rabbit', 'cat', 'cow', 'lion', 'rat', 'you', 'he', 'lovin']\n"
+     ]
+    }
+   ],
    "source": [
     "# List the top ten closest vectors in the vocabulary to the result of the expression above\n",
     "\n",
+    "computed_similarities = []\n",
     "\n",
+    "for word in nlp.vocab:\n",
+    "    if word.has_vector:\n",
+    "        if word.is_lower:\n",
+    "            if word.is_alpha:\n",
+    "                similarity = cosine_similarity(new_vector, word.vector)\n",
+    "                computed_similarities.append((word, similarity))\n",
     "\n",
+    "computed_similarities = sorted(computed_similarities, key=lambda item: -item[1])\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "print([w[0].text for w in computed_similarities[:10]])"
    ]
   },
   {
@@ -81,31 +94,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def vector_math(a,b,c):\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    "
+    "    a = nlp.vocab[str(a)].vector\n",
+    "    b = nlp.vocab[str(b)].vector\n",
+    "    c = nlp.vocab[str(c)].vector   \n",
+    "    new_vector = a - b + c\n",
+    "    computed_similarities = []\n",
+    "\n",
+    "    for word in nlp.vocab:\n",
+    "        if word.has_vector:\n",
+    "            if word.is_lower:\n",
+    "                if word.is_alpha:\n",
+    "                    similarity = cosine_similarity(new_vector, word.vector)\n",
+    "                    computed_similarities.append((word, similarity))\n",
+    "\n",
+    "    computed_similarities = sorted(computed_similarities, key=lambda item: -item[1])\n",
+    "\n",
+    "    return [w[0].text for w in computed_similarities[:10]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['king',\n",
+       " 'and',\n",
+       " 'that',\n",
+       " 'havin',\n",
+       " 'where',\n",
+       " 'she',\n",
+       " 'they',\n",
+       " 'woman',\n",
+       " 'somethin',\n",
+       " 'there']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Test the function on known words:\n",
     "vector_math('king','man','woman')"
@@ -121,30 +157,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import SentimentIntensityAnalyzer and create an sid object\n",
+    "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
     "\n",
-    "\n"
+    "sid = SentimentIntensityAnalyzer()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write a review as one continuous string (multiple sentences are ok)\n",
-    "review = ''"
+    "review = \"A testament to technology and historic film making. The film looks beautiful while also a technical marvel for its era. I don't fully get why its some peoples favorite film and the 3d effects simply just haven't aged well despite being heavily stylized. I would recommend watching the first half-hour by then if you want to turn if off feel free to do so, but if it clicks with you like I've seen this film click with others, it could be a contender for your favorite films of all time.\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'neg': 0.015, 'neu': 0.775, 'pos': 0.211, 'compound': 0.9432}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Obtain the sid scores for your review\n",
     "sid.polarity_scores(review)"
@@ -159,25 +207,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "def review_rating(string):\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    "
+    "    score = sid.polarity_scores(string)\n",
+    "    if score['compound'] < 0:\n",
+    "        return \"neg\"\n",
+    "    if score['compound'] == 0:\n",
+    "        return \"neu\"\n",
+    "    if score['compound'] > 0:\n",
+    "        return \"pos\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'pos'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Test the function on your review above:\n",
     "review_rating(review)"
@@ -200,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
